--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 <body>
 
-  <h1>Our Menu</h1>
+  <h1>Our Menu Hola</h1>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
